--- a/oppg 9.html
+++ b/oppg 9.html
@@ -36,19 +36,13 @@
         div.resulta{
             grid-area:resulta
         }
-        div.bredde{
-            grid-area:bredde
-        }  
-        div.høyde{
-            grid-area:høyde
-        }        
-        div.bredde2{
-            grid-area:bredde2
-        }        
-        div.høyde2{
-            grid-area:høyde2
-        }        
-        
+        div.slider{
+            grid-area:slider
+        }
+        div.slider2{
+
+        }
+
     
     </style>
 </head>
@@ -70,7 +64,7 @@
         <div id="result"></div>
         <div id="resulta" style="float:right;"></div>
         <div id="boks" style="background-color:green"></div>
-        <div id="boks2" style="background-color:blue;"></div>
+        <div id="boks2" style="background-color:blue; float:right;"></div>
         <div id="resultb"></div>
     </div>
     <script>
